# DelphaMCP

./: .env  .gitignore  Makefile  README.md  env.example  fastmcp_delpha_server.py  openapi.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
delpha_mcp/: config.py
